--- a/ProyectoPelicula/src/main/resources/application.properties
+++ b/ProyectoPelicula/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ProyectoPelicula
 spring.data.mongodb.username=root
 spring.data.mongodb.password=root
-spring.data.mongodb.uri=mongodb://root:root@localhost:27017/daw2?authSource=admin
+spring.data.mongodb.uri=mongodb://localhost:27017/Pelicula
 #docker network create la_meva_xarxa
 #docker run -d \
 #  --name mongodb \
@@ -9,4 +9,15 @@ spring.data.mongodb.uri=mongodb://root:root@localhost:27017/daw2?authSource=admi
 #  -p 27017:27017 \
 #  -e MONGO_INITDB_ROOT_USERNAME=root \
 #  -e MONGO_INITDB_ROOT_PASSWORD=root \
-#  mongo
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/usuari_db
+#spring.datasource.username=root
+#spring.datasource.password=FjeClot24@
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.security.oauth2.client.registration.google.client-id=TU_CLIENT_ID
+#spring.security.oauth2.client.registration.google.client-secret=TU_CLIENT_SECRET
+#spring.security.oauth2.client.registration.google.scope=profile,email
+
+# Logging
+#logging.level.org.springframework.security=DEBUG
