--- a/ProyectoPelicula/src/main/resources/application.properties
+++ b/ProyectoPelicula/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=ProyectoPelicula
 spring.data.mongodb.username=root
 spring.data.mongodb.password=root
-spring.data.mongodb.uri=mongodb://localhost:27017/Pelicula
+#spring.data.mongodb.uri=mongodb://localhost:27017/Pelicula?authSource=admin
+spring.data.mongodb.uri=mongodb://root:root@localhost:27017/Pelicula?authSource=admin
 #docker network create la_meva_xarxa
 #docker run -d \
 #  --name mongodb \
