--- a/ProyectoPelicula/src/main/resources/application.properties
+++ b/ProyectoPelicula/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ProyectoPelicula
-spring.data.mongodb.username=root
-spring.data.mongodb.password=root
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=root
 spring.data.mongodb.uri=mongodb://localhost:27017/Pelicula
 #docker network create la_meva_xarxa
 #docker run -d \
