Update code final

--- a/ProyectoPelicula/src/main/resources/application.properties
+++ b/ProyectoPelicula/src/main/resources/application.properties
@@ -10,10 +10,10 @@ spring.data.mongodb.uri=mongodb://localhost:27017/Pelicula
 #  -e MONGO_INITDB_ROOT_USERNAME=root \
 #  -e MONGO_INITDB_ROOT_PASSWORD=root \
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/usuari_db
-#spring.datasource.username=root
-#spring.datasource.password=FjeClot24@
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ProyectoSpring
+spring.datasource.username=root
+spring.datasource.password=FjeClot25@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.security.oauth2.client.registration.google.client-id=TU_CLIENT_ID
 #spring.security.oauth2.client.registration.google.client-secret=TU_CLIENT_SECRET
